--- a/index.html
+++ b/index.html
@@ -1,149 +1,95 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Zen-Hub KeySystem</title>
+  <title>Key System</title>
   <style>
-body {
+    body {
       background-color: black;
-      background-position: top left;
-      background-size: auto;
-      background-repeat: no-repeat;
-    }
-    #center-container {
+      color: white;
       display: flex;
       flex-direction: column;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       height: 100vh;
+      font-family: Arial, sans-serif;
     }
-    #text-label {
-      color: white;
-      font-size: 24px;
-    }
-    #generate-key-button {
-      margin-top: 20px;
-      padding: 10px 20px;
-      background-color: #337ab7;
+
+    button {
+      background-color: #4CAF50;
       color: white;
       border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    #subscribe-button {
-      margin-top: 10px;
+      border-radius: 20px;
       padding: 10px 20px;
-      background-color: #337ab7;
-      color: white;
-      border: none;
-      border-radius: 5px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin-bottom: 20px;
       cursor: pointer;
     }
-    #output-container {
+
+    #output {
       display: none;
+      margin-top: 20px;
+    }
+
+    #outputBox {
+      padding: 10px;
+      border: 1px solid #4CAF50;
+      border-radius: 10px;
+      background-color: #333;
+      text-align: center;
+    }
+
+    #copyButton {
       background-color: #333;
       color: white;
-      padding: 10px;
-      border-radius: 5px;
-      margin-top: 20px;
-    }
-    #copy-button {
-      background-color: #337ab7;
-      color: white;
       border: none;
-      border-radius: 5px;
+      border-radius: 20px;
+      padding: 5px 10px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 14px;
       cursor: pointer;
       margin-bottom: 10px;
-    }
-    @keyframes waterSplosh {
-      0% {
-        transform: translateY(0);
-      }
-      50% {
-        transform: translateY(-10px);
-      }
-      100% {
-        transform: translateY(0);
-      }
-    }
-    .water-splosh-animation {
-      animation: waterSplosh 0.5s ease-in-out;
     }
   </style>
 </head>
 <body>
-  <div id="center-container">
-    <div id="text-label">Zen-Hub KeySystem</div>
-    <button id="generate-key-button" onclick="generateKey()" disabled>Generate Key</button>
-    <button id="subscribe-button" onclick="subscribeToChannel()">Subscribe to our YouTube channel</button>
-    <div id="output-container">
-      <button id="copy-button" onclick="copyToClipboard()">Copy Key</button>
-      <div id="generated-key"></div>
+  <div>
+    <h1>Key System</h1>
+    <button onclick="generateAndSendKey()">Generate Key</button>
+    <div id="output">
+      <button id="copyButton" onclick="copyToClipboard()">Copy</button>
+      <div id="outputBox"></div>
     </div>
   </div>
 
   <script>
-    let isSubscribed = false;
-
-    function checkSubscriptionStatus() {
-      // Simulated API call
-      setTimeout(() => {
-        isSubscribed = true;
-        enableGenerateKeyButton();
-      }, 2000);
-    }
-
-    function enableGenerateKeyButton() {
-      const generateKeyButton = document.getElementById("generate-key-button");
-      generateKeyButton.disabled = !isSubscribed;
-    }
-
-    function subscribeToChannel() {
-      // Replace the URL with your YouTube channel URL
-      window.open("https://m.youtube.com/@ItzNpg", "_blank");
-      // After the user subscribes, you may call the checkSubscriptionStatus() function to update the status
-      checkSubscriptionStatus();
-    }
-
-    function validateGeneratedKey(generatedKey) {
-      // Replace "http://your-server-url.com:3000/validateKey" with your server's URL
-      const serverUrl = "http://your-server-url.com:3000/validateKey";
-      const requestData = JSON.stringify({ generatedKey: generatedKey });
-
-      const xhr = new XMLHttpRequest();
-      xhr.open("POST", serverUrl, true);
-      xhr.setRequestHeader("Content-Type", "application/json");
-
-      xhr.onreadystatechange = function () {
-        if (xhr.readyState === XMLHttpRequest.DONE) {
-          if (xhr.status === 200) {
-            const response = JSON.parse(xhr.responseText);
-            if (response.isValid) {
-              // Key is valid, enable the "Generate Key" button
-              document.getElementById("generate-key-button").disabled = false;
-            } else {
-              // Key is invalid, disable the "Generate Key" button
-              document.getElementById("generate-key-button").disabled = true;
-            }
-          } else {
-            console.error("Error while communicating with the server:", xhr.status);
-          }
-        }
-      };
-
-      xhr.send(requestData);
-    }
-
-    function generateKey() {
-      if (isSubscribed) {
-        const randomNumber = Math.floor(Math.random() * 10000000000);
-        const randomHash = Math.floor(Math.random() * 100000);
-        const key = `${randomNumber}#${randomHash}`;
-        document.getElementById("output-container").style.display = "block";
-        document.getElementById("generated-key").textContent = key;
-        document.getElementById("output-container").classList.add("water-splosh-animation");
-      } else {
-        alert("Please subscribe to our YouTube channel first to generate a key.");
+    function generateAndSendKey() {
+      var characters = "0123456789abcdef";
+      var keyLength = 16;
+      var generatedKey = "";
+      for (var i = 0; i < keyLength; i++) {
+        generatedKey += characters.charAt(Math.floor(Math.random() * characters.length));
       }
+      document.getElementById("outputBox").textContent = generatedKey;
+      document.getElementById("output").style.display = "block";
+
+      // Send the generated key to Roblox using postMessage
+      window.parent.postMessage(generatedKey, "https://www.roblox.com/");
+    }
+
+    function copyToClipboard() {
+      var keyOutput = document.getElementById("outputBox");
+      var textArea = document.createElement("textarea");
+      textArea.value = keyOutput.textContent;
+      document.body.appendChild(textArea);
+      textArea.select();
+      document.execCommand("copy");
+      document.body.removeChild(textArea);
+      alert("Key copied to clipboard!");
     }
   </script>
 </body>
